<resources>
    <string name="app_name">Lloguer Material GIRES</string>
    <string name="entregades">Comandes Entregades</string>
    <string name="pendents">Comandes pendents de recollir</string>
    <string name="data">Data tornada:</string>
    <string name="Borrar">Borrar</string>
    <string name="Confirmar">Confirmar</string>
    <string name="precio_alquiler">Preu Lloguer</string>
    <string name="LlistaMaterial">Llistat de Material:</string>
    <string name="Preu">Preu a pagar:</string>
    <string name="Usuari">Usuari</string>
    <string name="Contrasenya">Contrasenya</string>
    <string name="Entra">Entra</string>
    <string name="user">Usuari:</string>
    <string name="Pass">Contrasenya:</string>
    <string name="cannot_write">no es pot llegir</string>
    <string name="cannot_reat">no puede leer la lista</string>
</resources>
